@@ -1,5 +1,13 @@
 2005-02-08  Roland Illig  <roland.illig@gmx.de>
 
+	* widget.h: Renamed define_label to buttonbar_set_label. Renamed
+	define_label_data to buttonbar_set_label_data. Renamed
+	redraw_labels to buttonbar_redraw. Provided compatibility macros
+	to enable a smooth transition between the old and the new names.
+	* widget.c: Likewise.
+
+2005-02-08  Roland Illig  <roland.illig@gmx.de>
+
 	* *.c: Reordered header inclusion.
 
 2005-02-08  Andrew V. Samoilov  <sav@bcs.zp.ua>
